# adm1dae

./: .gitignore  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.github/workflows/: docs.yml
docs/: Makefile  make.bat
docs/source/: acknowledgement.rst  api.rst  citation_license_contact.rst  conf.py  examples.rst  index.rst  installation.rst  license.rst  usage.rst
docs/source/_templates/: layout.html
src/adm1dae/: __init__.py  init_adm1_bsm2.py  simulate.py
src/adm1dae/data/: AD_constinfluent_bsm2.npz
