[project]
name = "adm1dae"
version = "0.1.0"
description = "ADM1 DAE model with BSM2 algebraic pH and H2 solvers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Taher Abunama", email = "tabunama@gmail.com" }
]
license = "LicenseRef-ADM1DAE"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/tabunama/adm1dae"
Repository = "https://github.com/tabunama/adm1dae"
Documentation = "https://tabunama.github.io/adm1dae/"

[project.scripts]
adm1dae-sim = "adm1dae.simulate:main"